--- a/public/.htaccess
+++ b/public/.htaccess
@@ -53,7 +53,7 @@ RewriteRule  ^(robots\.txt)$ /robots [NC,L]
     Header unset X-Frame-Options
 </IfModule>
 
-# CUSTOM APACHE RULES
+# CUSTOM APACHE RULESs
 # ===================
 
 
